agregando estilo a resultados

--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-12">
-        <img class="img-responsive" src="assets/img/Star-Wars.jpg">
+        <img class="img-responsive center-block" src="assets/img/Star-Wars.jpg">
       </div>
     </div> 
     <div class="row">
       <div class="col-xs-4 col-sm-4">
-        <button id="character">Characters</button>
+        <button id="character" class="center-block">Characters</button>
       </div>
       <div class="col-xs-4 col-sm-4">
-        <button id="starship">Starships</button>
+        <button id="starship" class="center-block">Starships</button>
       </div>
       <div class="col-xs-4 col-sm-4">
-        <button id="planet">Planets</button>
+        <button id="planet" class="center-block">Planets</button>
       </div>
     </div>
     <div class="row" id="img-container">
