--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+
+  <!-- Modal -->
+  <div class="modal fade bs-example-modal-sm" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      </div>
+      ...
+    </div>
+  </div>
+</div>
+
   <div class="container-fluid">
     <div class="row">
       <div class="col-xs-12 col-sm-12">
